2009-02-14 Chris Allegretta <chrisa@asty.org>
        * nano.c (precalc_multicolorinfo) - Add debugging so we have a better clue if further
          issues arise.   Also start at the beginning of later lines when trying to match the
          end of a multi-line regex.  Fixes more overly aggressive highlighting found by 
          Mike Frysinger.  Finally, advance to the match end for performance.

2009-02-11 Chris Allegretta <chrisa@asty.org>
	* nanorc.c (parse_include): Do call real_dir_from_tilde() on included
	  files in .nanorc, but still avoiding bug #25297.  Fixes ~ and ~user
	  specifications for nanorc include files, as reported by Eitan Adler.

2009-02-09 Chris Allegretta <chrisa@asty.org>
	* New option -q, --quiet, rcfile option "quiet" implemented.  Skips printing
	  errors about the rcfile and asking user to press enter.  Also, nano should
	  now only ask for one enter press when there is an error when not using -q.
	  Based on discussion between Eitan Adler and Mike Frysinger.
	* rcfile.c (parse_keybinding) -  Significant cleanups and fixes for 
	  detecting and reporting errors in key bindings code.

2009-02-08 Chris Allegretta <chrisa@asty.org>
	* Make reset_multidata reset more lines, since contrary to previous problems the
	  syntax highlting is now too *un*ambitious, causing display glitches when
	  deleting a regex boundary.
	* Add more multidata initliazers for new buffers and 'magic lines'.  Fixes segfaults
	  with syntax highlighting in new buffers, initially reported by Mike Frysinger.

GNU nano 2.1.8 - 2009.02.07
2009-02-06 Chris Allegretta <chrisa@asty.org>
	* rcfile.c (parse_include): Abort on being unable to open an included rcfile.  Fixes
	  Savannah bug 25490, nanorc: "include"ing a file which doesn't exist causes nano to segfault.

2009-02-05 Chris Allegretta <chrisa@asty.org>
	* More color syntax speedups:  Determine in reset_multis() whether we really need to call